myhelm2/templates/spread-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ../kompose convert --controller deployment --out k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spread-gateway
  name: spread-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: spread-gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: ../kompose convert --controller deployment --out k8s/
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: spread-gateway
    spec:
      containers:
        - image: sokolmish/spread-gw
          name: spread-gateway
          ports:
            - containerPort: 8080
          resources: {}
      # restartPolicy: OnFailure
status: {}
