myhelm2/templates/spread_gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert --controller deployment --out k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spread-gateway
  name: spread-gateway
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: spread-gateway
# status:
  # loadBalancer:
  #   ingress:
  #   - ip: 192.0.2.127
