myhelm2/templates/spread_loyalty-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert --controller deployment --out k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spread-loyalty
  name: spread-loyalty
spec:
  ports:
    - name: "8050"
      port: 8050
      targetPort: 8050
  selector:
    io.kompose.service: spread-loyalty
status:
  loadBalancer: {}
