myhelm2/templates/spread_payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert --controller deployment --out k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spread-payment
  name: spread-payment
spec:
  ports:
    - name: "8060"
      port: 8060
      targetPort: 8060
  selector:
    io.kompose.service: spread-payment
status:
  loadBalancer: {}
