myhelm2/templates/spread_reservation-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ../kompose convert --controller deployment --out k8s/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: spread-reservation
  name: spread-reservation
spec:
  ports:
    - name: "8070"
      port: 8070
      targetPort: 8070
  selector:
    io.kompose.service: spread-reservation
status:
  loadBalancer: {}
